# fp-study

./: README.md  main.ts  package.json
ch1/: average.ts  db.ts  fpPower.ts  index.ts  oopPower.ts  power.ts  showStudent.ts
ch2/: Address.ts  Person.ts  Student.ts  findStudentsBy.ts  index.ts  lens.ts  reduce.ts
ch3/: Address.ts  filter.ts  index.ts  map.ts  sort.ts
ch8-server/: index.ts  package.json  students.ts
javascript/: .gitignore  main.js  package.json
python/: .gitignore  pyproject.toml  pytest.ini
python/python/: main.py
python/python/ch1/: average.py  db.py  index.py  power.py  show_student.py
python/python/ch2/: Address.py  Person.py  Student.py  find_students_by.py  index.py
python/python/ch3/: Tree.py  TreeNode.py  filter.py  index.py  map.py  reduce.py  sort.py  tree_traversal.py
python/python/ch4/: compose.py  currying.py  impure_and_pure.py  index.py  normalize.py  partial.py  trim.py
python/python/ch5/: Either.py  EitherFactory.py  Empty.py  IO.py  Just.py  Left.py  Maybe.py  MaybeFactory.py  MonadWrapper.py  Nothing.py  Right.py  Wrapper.py  functor.py  index.py  lift.py  monad.py  prop.py
python/python/ch6/: TestDB.py  compute_average_grade.py
python/python/ch6/tests/: test_compute_average_grade.py  test_mocking.py  test_show_student.py
python/python/ch7/: PerformanceChecker.py  check_performance.py  index.py  memoize.py
python/python/ch8/: average.py  callback_hell.py  fetch.py  from_promise.py  get_json.py  index.py  lazy_create_data.py  promise.py  reactive_programming.py  recursive_generator.py
typescript/: .eslintrc  (+2 more)
(+149 files in other folders)
