[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toolz = "^0.11.2"
pydash = "^5.1.0"
pytest-cov = "^3.0.0"
hypothesis = "^6.31.6"

requests = "^2.26.0"
# poetry run pytest
[tool.poetry.dev-dependencies]
pytest = "^5.2"

# poetry run ch1 ... ch6
[tool.poetry.scripts]
ch1 = "python.ch1.index:index"
ch2 = "python.ch2.index:index"
ch3 = "python.ch3.index:index"
ch4 = "python.ch4.index:index"
ch5 = "python.ch5.index:index"
ch6 = "python.ch6.index:index"
ch6 = "python.ch7.index:index"

[tool.pytest]
addopts = "--cov -s"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
